--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main>
-    <img src="images/image-qr-code.png">
+    <img src="images/image-qr-code.png" alt="QR Code">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 </main>
