--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 </main>
 <footer>
-    Code by Brayden Williams
+    Coded by <a href="https://github.com/redstar504">Brayden Williams</a>
+    for <a href="https://frontendmentor.io">FM</a>
 </footer>
 </body>
 </html>
